force-app/main/default/objects/Pricebook2/fields/ReponsibleForPricebook__c.field-meta.xml
<CustomField>
    <fullName>ReponsibleForPricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible for Pricebook</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Responsible for Pricebook</relationshipLabel>
    <relationshipName>ResponsiblePricebook</relationshipName>
    <type>Lookup</type>
</CustomField>